--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#9E2828"
+    android:backgroundTint="#FFEB3B"
     tools:context=".HomeActivity">
 
     <TextView
@@ -41,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
         android:text="START"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="24sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
